2004-10-15  Derek Price  <derek@ximbiot.com>

	* getpass.c: Update from GNULIB.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Add stat-macros.h.
	* stat.c: Update from GNULIB.
	* stat-macros.c: New file from GNULIB.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* nanosleep.c: Update from GNULIB.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* memmove.c: Update from GNULIB.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move minmax.h to its own section.

2004-10-07  Derek Price  <derek@ximbiot.com>

	* system.h: Reorganize slightly.

2004-10-07  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Remove "xstrdup.c" from project.
	Add "strcasecmp.c", "getopt_.h" and "getopt_int.h" to project.
	* libcvs.dep: Regenerate for "libcvs.dsp" changes.
	* libcvs.mak: Regenerate for "libcvs.dsp" changes.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* system.h: Include getopt.h.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Add getpass.h.
	* getpass.h: New file from GNULIB.
	* getpass.c: Update from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Add strcase.h.
	* strcase.h, strcasecmp.c, strncasecmp.c: New files from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* gethostname.c: Update from gnulib.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move getline, getnline, & getndelim2
	sources to their own sections.
	* getline.c, getndelim2.c, getndelim2.h, getnline.c, getnline.h: Update
	from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Add getopt.h.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Add new configuration for getopt.
	* getopt.h: Remove file.
	* getopt_.h, getopt_int.h: New files from GNULIB.
	* getopt.c, getopt1.c: Update from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* mkstemp.c, tempname.c: Update from GNULIB.
