@@ -8,11 +8,10 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-#
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat strerror
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpass-gnu gettext gettime gettimeofday lstat memmove minmax mkstemp mktime nanosleep pathmax regex restrict save-cwd stat stdbool strcase strerror time_r timespec tzset unlocked-io vasnprintf xalloc xgetcwd xsize
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat strerror vasprintf
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpass-gnu gettext gettime gettimeofday lstat memmove minmax mkstemp mktime nanosleep pathmax regex restrict save-cwd stat stdbool strcase strerror time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc xgetcwd xsize
 
-AUTOMAKE_OPTIONS = 1.8 gnits
+AUTOMAKE_OPTIONS = 1.5 gnits no-dependencies
 
 noinst_LIBRARIES = libgnu.a
 
@@ -26,7 +25,8 @@ CLEANFILES =
 DISTCLEANFILES =
 MAINTAINERCLEANFILES =
 
-## <<< alloca
+## begin gnulib module alloca
+
 BUILT_SOURCES += $(ALLOCA_H)
 EXTRA_DIST += alloca_.h
 
@@ -38,11 +38,11 @@ alloca.h: alloca_.h
 	mv $@-t $@
 MOSTLYCLEANFILES += alloca.h alloca.h-t
 
-libgnu_a_LIBADD += @ALLOCA@
+libgnu_a_LIBADD += @{perhapsLT}ALLOCA@
+## end   gnulib module alloca
 
-## >>> alloca
+## begin gnulib module alloca-opt
 
-## <<< alloca-opt
 BUILT_SOURCES += $(ALLOCA_H)
 EXTRA_DIST += alloca_.h
 
@@ -54,24 +54,28 @@ alloca.h: alloca_.h
 	mv $@-t $@
 MOSTLYCLEANFILES += alloca.h alloca.h-t
 
-## >>> alloca-opt
+## end   gnulib module alloca-opt
 
-## <<< dirname
+## begin gnulib module dirname
+
 libgnu_a_SOURCES += dirname.h dirname.c basename.c stripslash.c
 
-## >>> dirname
+## end   gnulib module dirname
 
-## <<< exit
+## begin gnulib module exit
+
 libgnu_a_SOURCES += exit.h
 
-## >>> exit
+## end   gnulib module exit
 
-## <<< exitfail
+## begin gnulib module exitfail
+
 libgnu_a_SOURCES += exitfail.h exitfail.c
 
-## >>> exitfail
+## end   gnulib module exitfail
 
-## <<< fnmatch
+## begin gnulib module fnmatch
+
 BUILT_SOURCES += $(FNMATCH_H)
 EXTRA_DIST += fnmatch_.h fnmatch_loop.c
 
@@ -83,25 +87,29 @@ fnmatch.h: fnmatch_.h
 	mv $@-t $@
 MOSTLYCLEANFILES += fnmatch.h fnmatch.h-t
 
-## >>> fnmatch
+## end   gnulib module fnmatch
 
-## <<< getline
+## begin gnulib module getline
+
 libgnu_a_SOURCES += getline.h
 EXTRA_DIST += getndelim2.h getndelim2.c
 
-## >>> getline
+## end   gnulib module getline
 
-## <<< getndelim2
+## begin gnulib module getndelim2
+
 EXTRA_DIST += getndelim2.h getndelim2.c
 
-## >>> getndelim2
+## end   gnulib module getndelim2
 
-## <<< getnline
+## begin gnulib module getnline
+
 libgnu_a_SOURCES += getnline.h getnline.c
 
-## >>> getnline
+## end   gnulib module getnline
 
-## <<< getopt
+## begin gnulib module getopt
+
 BUILT_SOURCES += $(GETOPT_H)
 EXTRA_DIST += getopt_.h getopt_int.h
 
@@ -113,49 +121,58 @@ getopt.h: getopt_.h
 	mv $@-t $@
 MOSTLYCLEANFILES += getopt.h getopt.h-t
 
-## >>> getopt
+## end   gnulib module getopt
 
-## <<< getpass-gnu
+## begin gnulib module getpass-gnu
+
 libgnu_a_SOURCES += getpass.h
 
-## >>> getpass-gnu
+## end   gnulib module getpass-gnu
 
-## <<< gettext
+## begin gnulib module gettext
+
 libgnu_a_SOURCES += gettext.h
 
-## >>> gettext
+## end   gnulib module gettext
 
-## <<< gettime
+## begin gnulib module gettime
+
 libgnu_a_SOURCES += gettime.c
 
-## >>> gettime
+## end   gnulib module gettime
 
-## <<< minmax
+## begin gnulib module minmax
+
 libgnu_a_SOURCES += minmax.h
 
-## >>> minmax
+## end   gnulib module minmax
 
-## <<< pathmax
+## begin gnulib module pathmax
+
 libgnu_a_SOURCES += pathmax.h
 
-## >>> pathmax
+## end   gnulib module pathmax
 
-## <<< regex
+## begin gnulib module regex
+
 libgnu_a_SOURCES += regex.h
 
-## >>> regex
+## end   gnulib module regex
 
-## <<< save-cwd
+## begin gnulib module save-cwd
+
 libgnu_a_SOURCES += save-cwd.h save-cwd.c
 
-## >>> save-cwd
+## end   gnulib module save-cwd
 
-## <<< stat
+## begin gnulib module stat
+
 libgnu_a_SOURCES += stat-macros.h
 
-## >>> stat
+## end   gnulib module stat
 
-## <<< stdbool
+## begin gnulib module stdbool
+
 BUILT_SOURCES += $(STDBOOL_H)
 EXTRA_DIST += stdbool_.h
 
@@ -167,47 +184,59 @@ stdbool.h: stdbool_.h
 	mv $@-t $@
 MOSTLYCLEANFILES += stdbool.h stdbool.h-t
 
-## >>> stdbool
+## end   gnulib module stdbool
 
-## <<< strcase
+## begin gnulib module strcase
+
 libgnu_a_SOURCES += strcase.h
 
-## >>> strcase
+## end   gnulib module strcase
 
-## <<< time_r
+## begin gnulib module time_r
+
 libgnu_a_SOURCES += time_r.h
 
-## >>> time_r
+## end   gnulib module time_r
 
-## <<< timespec
+## begin gnulib module timespec
+
 libgnu_a_SOURCES += timespec.h
 
-## >>> timespec
+## end   gnulib module timespec
 
-## <<< unlocked-io
+## begin gnulib module unlocked-io
+
 libgnu_a_SOURCES += unlocked-io.h
 
-## >>> unlocked-io
+## end   gnulib module unlocked-io
 
-## <<< vasnprintf
+## begin gnulib module vasnprintf
+
 libgnu_a_SOURCES += printf-args.h printf-parse.h vasnprintf.h
 
-## >>> vasnprintf
+## end   gnulib module vasnprintf
 
-## <<< xalloc
+## begin gnulib module vasprintf
+
+libgnu_a_SOURCES += vasprintf.h
+
+## end   gnulib module vasprintf
+
+## begin gnulib module xalloc
+
 libgnu_a_SOURCES += xalloc.h xmalloc.c
 
-## >>> xalloc
+## end   gnulib module xalloc
 
-## <<< xgetcwd
+## begin gnulib module xgetcwd
+
 libgnu_a_SOURCES += xgetcwd.h xgetcwd.c
 
-## >>> xgetcwd
+## end   gnulib module xgetcwd
 
-## <<< xsize
+## begin gnulib module xsize
+
 libgnu_a_SOURCES += xsize.h
 
-## >>> xsize
+## end   gnulib module xsize
 
-
-# Makefile.am ends here
